<resources>
    <string name="app_name">Art Shop</string>
    <string name="painting">Painting</string>
    <string name="art_shop">Art Shop</string>
    <string name="here_is_my_website"> You can find your category of interest below,
        and by browsing the images of the handmade art in each category,
         choose your favourite one to buy!</string>
    <string name="knitting">Knitting</string>
    <string name="pottery">Pottery</string>
    <string name="sculpture">Sculpture</string>
    <string name="Embroidery">embroidery</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="login">Login</string>
    <string name="about_me">About me</string>
    <string name="contact">Contact</string>
    <string name="more">more</string>
    <string name="title_placeholder">Title</string>
    <string name="items_info_placeholder">Click for more info.</string>
    <string name="description_placeholder"> If you are interested to learn more about this item, please click on the image! </string>
    <string name="welcome_to_your_profile_page_where_you_can_manage_your_account_view_your_orders_and_balance_on_your_gift_cards_the_functionality_on_this_page_is_not_set_yet">Welcome to your profile page, where you can manage your account, view your orders and balance on your gift cards! ( The functionality on this page is not set yet!!!!)</string>
    <string name="user_id">User ID :</string>
    <string name="password">Password :</string>
    <string name="enter_user_id">Enter user ID</string>
    <string name="enter_password">Enter password</string>
    <string name="register_new_user">Register new user</string>
    <string name="hi_n_my_name_is_parniyan_and_i_m_a_persian_canadian_artist_n_who_loves_to_create_handmade_art_and_sell_them_online_n_i_hope_you_enjoy_the_beauty_of_my_art">Hi,\n My name is Parniyan and I\'m a persian-canadian artist \n who loves to create handmade art and sell them online. \n I hope you enjoy the beauty of my art!</string>
    <string name="todo">TODO</string>
    <string name="contact_me">Contact Me :</string>
    <string name="follow_me">Follow me :</string>
    <string name="email_parniyan_roosta_gmail_com">Email: parniyan.roosta@gmail.com</string>
    <string name="facebook_parniyan_roosta">Facebook: parniyan.roosta</string>
    <string name="instagram_parniyan_roosta">Instagram: @parniyan.roosta</string>
    <string name="phone_587_777_7777">Phone: 587-777-7777</string>
    <string name="send_me_a_message">Send me a message :</string>
    <string name="send">SEND</string>
    <string name="page_not_implemented">This page\'s code is not implemented yet, but the structure is the same as the \"Painting Category\".\nSorry for the inconvenience!</string>
    <string name="textview">TextView</string>
    <string name="price">Price :</string>



    <string-array name="items_titles">
        <item>Daisies</item>
        <item>Elephants</item>
        <item>Fancy Flowers</item>
        <item>Flower Vase</item>
        <item>Flowers On The Wall</item>
        <item>Happy Trees</item>
        <item>Mountains</item>
        <item>Orchids</item>
        <item>Persian</item>
        <item>Rainy Autumn</item>
    </string-array>

    <string-array name="items_description">
        <item>This painting offers the contrast of colors as well as the impasto technique, to display the beauty of white daisies on a dark navy background.\nMedium &#58; acrylic paints and pastes</item>
        <item>The peaceful walk of elephants on the calm and silent scenery in the beautiful sunset.\nMedium &#58; Oil color</item>
        <item>Vivid colors of fancy flowers will bring happiness and joy to your eyes, as well as your home.\nMedium &#58; Acrylic paints and pastes </item>
        <item>The exquisite blend of vivid and happy colors, to create the most beautiful abstract painting of the wild flowers bouquet in a vase &#33; \nMedium &#58; Acrylic paints and pastes</item>
        <item>Imagine a very calm afternoon walk in the most silent alley of the town, and seeing the beautiful bunches of small white flowers on top of the clay wall of an old house &#46; &#46; &#46;\nMedium &#58; Acrylic paints and pastes</item>
        <item>Autumn in my eyes &#33; Happy, colorful and full of love and warmth.\nMedium &#58; Acrylic paints and pastes</item>
        <item>Abstract painting of peaceful and mysterious mountains.\nMedium &#58; Acrylic paint</item>
        <item>The most gorgeous and elegant flowers of all the time, orchids &#33;\n Medium &#58; Acrylic paints and pastes</item>
        <item>Persian style painting &#33; making me homesick already &#46; &#46; &#46;\nMedium &#58; Acrylic paints, pastes and clay </item>
        <item>A lovely walk in a rainy evening, in a Parisian park &#33;\nMedium &#58; Acrylic paints and pastes</item>
    </string-array>


    <array name="items_images">
        <item>@drawable/img_daisies</item>
        <item>@drawable/img_elephants</item>
        <item>@drawable/img_fancyflowers</item>
        <item>@drawable/img_flowervase</item>
        <item>@drawable/img_flowersonthewall</item>
        <item>@drawable/img_happytrees</item>
        <item>@drawable/img_mountains</item>
        <item>@drawable/img_orchids</item>
        <item>@drawable/img_persian</item>
        <item>@drawable/img_rainyautumn</item>
    </array>

    <string-array name="items_price">
        <item>250 CAD</item>
        <item>380 CAD</item>
        <item>360 CAD</item>
        <item>150 CAD</item>
        <item>450 CAD</item>
        <item>500 CAD</item>
        <item>180 CAD</item>
        <item>700 CAD</item>
        <item>150 CAD</item>
        <item>170 CAD</item>
    </string-array>
</resources>