<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        android:contentDescription="@string/backgroundimage"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/txtAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="500dp"
        android:fontFamily="cursive"
        android:shadowColor="#FFDF5BC5"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"
        android:text="@string/art_shop"
        android:textColor="@color/MyFinalApp_txtColor"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <LinearLayout
        android:id="@+id/categoriesLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal"
        android:layout_marginTop="250dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



    <LinearLayout
        android:layout_height="400dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/firstCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="15dp"
            android:text="@string/painting"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView111"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/painting"
            app:srcCompat="@drawable/painting" />

        <TextView
            android:id="@+id/thirdCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="15dp"
            android:text="@string/pottery"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView333"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/pottery"
            app:srcCompat="@drawable/pottery"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>


    <LinearLayout
        android:layout_height="400dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/secondCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="15dp"
            android:text="@string/knitting"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView222"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/knitting"
            app:srcCompat="@drawable/knitting" />


        <TextView
            android:id="@+id/forthCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="15dp"
            android:text="@string/Embroidery"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView444"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/Embroidery"
            app:srcCompat="@drawable/embroidery" />

    </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_HomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here_is_my_website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppTitle"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>